--- a/Appyandroid/app/src/main/res/layout/activity_main.xml
+++ b/Appyandroid/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
     android:layout_height="50sp"
     android:hint="Correo"
     android:inputType="textEmailAddress"
+    android:background="@color/lila"
     android:textSize="30sp"
 
     ></EditText>
@@ -58,11 +59,12 @@
         android:layout_height="50sp"
         android:hint="Clave"
         android:inputType="textPassword"
+        android:background="@color/lila"
         android:textSize="30sp"
         ></EditText>
 
 
-    ></LinearLayout>
+    </LinearLayout>
 
 
     <LinearLayout
@@ -71,6 +73,7 @@
         android:orientation="vertical"
         android:layout_gravity="bottom">
     <Button
+        android:id="@+id/Botton_Iniciar_Secion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="iniciar seccion"
@@ -82,6 +85,7 @@
         android:backgroundTint="@color/amarillo"
         ></Button>
         <Button
+            android:id="@+id/Botton_Regitrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Registrar"
@@ -92,6 +96,7 @@
             android:textSize="30sp"
             android:backgroundTint="@color/amarillo"
             ></Button>
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
